# Tasks.md

./: .gitignore  Dockerfile  KEYBOARD_SHORTCUTS.md  README.md
autoschedule/: pyproject.toml  requirements.txt
autoschedule/src/autoschedule/: __init__.py  caldav_client.py  config.py  dependency_resolver.py  main.py  markdown_parser.py  run_periodic.py  scheduler.py
backend/: server.js
frontend/src/: App.jsx
frontend/src/components/: card.jsx  expanded-card.jsx  header.jsx
frontend/src/stylesheets/: index.css
